refasctor swagger and some methods
